--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
 
                 echo "- [$(basename ${file%.md})](./$(basename ${file%.md}))" >> index.md
 
-                reveal-md $file --static $output_dir --template ./assets/reveal.html --preprocessor ./assets/preproc.js
+                reveal-md $file --static $output_dir --template ./assets/reveal.html --preprocessor ./assets/preproc.js --scripts assets/inject.js
                 file_dir=$(dirname $file)
                 if [ -d "$file_dir/images" ]; then
                     cp -r $file_dir/images $output_dir
